editing 1-19 one more time

--- a/ai-hermeneutics-kit.html
+++ b/ai-hermeneutics-kit.html
@@ -18,7 +18,7 @@
       </div>
       <h1>AI Hermeneutics Kit</h1>
       <h2>How to use this</h2>
-      <p>This kit provides some theoretical and historical context for the central arguments of my blog. Its purpose is to show that the interpretive challenges posed by AI are not entirely new, but are intensifications of questions that the field of hermeneutics has been exploring for centuries. The pages are designed to build a coherent framework, moving from theory to a practical method of reading.</p>
+      <p>This kit provides the theoretical and historical context for the central arguments of this blog. Its purpose is to show that the interpretive challenges posed by AI are not entirely new, but are intensifications of questions that the field of hermeneutics has been exploring for centuries. The pages are designed to build a coherent framework, moving from theory to a practical method of reading.</p>
 
       <nav class="toc">
         <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">Theoretical Foundations</h3>
@@ -40,6 +40,11 @@
           <li><a href="ai-kit-death-author.html">The Death of the Author (From Theory to Reality)</a></li>
           <li><a href="ai-kit-machine-speaks.html">The Machine Speaks (Philosophy of AI Language)</a></li>
           <li><a href="ai-kit-genealogy.html">Genealogy of Interpreters (Historical Perspectives)</a></li>
+        </ul>
+
+        <h3 style="margin-top: 1.5rem; font-size: 1.2rem;">Reference</h3>
+        <ul>
+            <li><a href="ai-kit-glossary.html">Glossary & Key Concepts</a></li>
         </ul>
       </nav>
       <div class="bottom-links">
