--- a/post19.html
+++ b/post19.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <h2>19 A Big Thank-You to Benjamin, But...</h2>
-            <p>So of course, a definite big thank-you to <a href="post18.html">Benjamin for his post</a>. But I don't know if I buy it.</p>
+            <p>So of course, a definite big thank-you to <a href="post18.html">Benjamin for his post</a>. But I don't know if I'm at quite the same place.</p>
             <p>Trying to work out why. And the bigger priority, trying to work out what the live options here are.</p>
             <p><a href="index.html">Home</a> | <a href="post18.html">Previous Post</a> | <a href="post20.html">Next Post</a></p>
         </article>
