--- a/post4.html
+++ b/post4.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <h2>4 This Puzzles Me</h2>
-            <p>Why do people hate AI? Why do they feel real disgust or fear about AI? I don't. I never have. I can't explain it. I can't explain other people's reactions and I can't explain mine. It puzzles me in a really deep way. 
+            <p>I believe people who say they hate AI. I don't doubt they feel real disgust or fear about AI. I don't. I never have. I can't explain it. I can't explain other people's reactions and I can't explain mine. It puzzles me in a pretty deep way. 
             <p>Here's a memory from grad school about computers and C++ and poetry. Maybe it gets at something helpful.</p>                
             <p>C++ is a programming language. People still use it for lots of things. It has a reputation for being hard to learn and hard to use. Back in 1997 I was working on my MFA in poetry at the University of Arkansas. C++ was the language for stuff other than HTML for websites. I was fascinated by C++ because of its look on the "page." Here's a random example:</p>
 
