--- a/header.html
+++ b/header.html
@@ -1,8 +1,11 @@
 <header class="site-header">
   <h1><a href="index.html">Professor Plate's Notebook</a></h1>
   <nav class="top-links">
-    <a class="quickkit-pill" href="Romantic-quick-kit.html" aria-label="Romantic Quick Kit">
-      Romantic quick kit
+    <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+      Romantic Quick Kit
+    </a>
+    <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+      AI Hermeneutics Kit
     </a>
   </nav>
 </header>
