--- a/post12.html
+++ b/post12.html
@@ -33,7 +33,7 @@
 <ul>
 <li><strong>Imitative “making”:</strong> models remix the fruits of human labor into artifacts that look like love’s work, but aren’t.</li>
 <li><strong>Quality drift:</strong> the “photocopy of a photocopy” dynamic degrades language, images, and attention over time.</li>
-<li><strong>Memetic rot:</strong> weaponized, AI‑assisted imagery accelerates a culture of sneer and spite.</li>
+<li><strong>Memetic rot:</strong> weaponized, AI‑assisted imagery accelerates a culture of sneering and spite.</li>
 <li><strong>Liturgical danger:</strong> AI‑generated sermons or pastoral “personas” replace presence with its shadow.</li>
 </ul>
 
