--- a/romantic-kit-hermeneutics.html
+++ b/romantic-kit-hermeneutics.html
@@ -56,7 +56,7 @@
       <li><strong>Theory:</strong> Stanford Encyclopedia of Philosophy on <a href="https://plato.stanford.edu/entries/hermeneutics/">Hermeneutics</a> and <a href="https://plato.stanford.edu/entries/schleiermacher/">Schleiermacher</a>.</li>
       <li><strong>Practice in Action (Primary Texts):</strong>
           <ul>
-              <li>William Wordsworth, <a href="https://www.gutenberg.org/files/8308/8308-h/8308-h.htm#link2H_PREF">“Preface to Lyrical Ballads” (1802)</a> — A manifesto for a new kind of poetry.</li>
+              <li>William Wordsworth, <a href="https://anthologydev.lib.virginia.edu/work/Wordsworth/wordsworth-preface">“Preface to Lyrical Ballads” (1802)</a> — A manifesto for a new kind of poetry.</li>
               <li>Samuel Taylor Coleridge, <a href="https://www.gutenberg.org/files/6081/6081-h/6081-h.htm"><em>Biographia Literaria</em></a> — Dives into the philosophical distinction between mechanic and organic form.</li>
           </ul>
       </li>
