fixed links in posts 53 to 59

--- a/ai-kit-hermeneutics-of-risk.html
+++ b/ai-kit-hermeneutics-of-risk.html
@@ -39,7 +39,7 @@
       <p>These are risks that arise from our interpretation of the machine's output. They are often intensified versions of the dangers posed by any powerful text.</p>
       <ul>
         <li><strong>Sophisticated Misinformation:</strong> The "dangerous book" tradition warns of texts that spread falsehoods. AI can generate such texts (e.g., propaganda, fake news) with unprecedented scale and personalization, making them potentially more effective and harder to identify.</li>
-        <li><strong>Cultural Homogenization:</strong> An LLM, as a "blurry JPEG of the web" (Ted Chiang), tends to reproduce the most statistically common patterns from its training data. A risk of over-reliance on such texts is a potential flattening of linguistic and cultural diversity, reinforcing a global monoculture.</li>
+        <li><strong>Cultural Homogenization:</strong> An LLM, as a <a href="post37.html"></a> "blurry JPEG of the web" (Ted Chiang), tends to reproduce the most statistically common patterns from its training data. A risk of over-reliance on such texts is a potential flattening of linguistic and cultural diversity, reinforcing a global monoculture.</li>
         <li><strong>Hidden Bias:</strong> The training data for large models contains the collected biases of human society. AI texts can reproduce and amplify these biases (racism, sexism, etc.) under a veneer of objective, machine-generated neutrality. Reading such texts uncritically risks internalizing these harmful ideologies. This calls for a "hermeneutics of suspicion," as advocated by Paul Ricoeur, to unmask these latent structures.</li>
       </ul>
 
