--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 <li><a href="post62.html">62 A Practical Method for Reading AI: Archaeology and Teleology</a></li>
                 <li><a href="post61.html">61 A Conflict of Interpretations: Ricoeur's Method for Reading AI</a></li>
                 <li><a href="post60.html">60 Sleep Well! The Unconscious Arrogance of Medieval Sermon Technology</a></li>
-                <li><a href="post59.html">59 Putting the Toolkit to Work: A Hermeneutic Reading of "Hero"</a></li>
-                <li><a href="post58.html">58 "Better Than He Understood Himself": Why Interpretation Is Irreducible</a></li>
-                <li><a href="post57.html">57 The Interpreter's Blind Spot: Why Analyzing the System Isn't Enough</a></li>
-                <li><a href="post56.html">56 Beyond the Teenage Diary: The Rigor of Romantic Individuality</a></li>
-                <li><a href="post55.html">55 More Than Bullshit: A Romantic Reading of the Textual Unconscious</a></li>
-                <li><a href="post54.html">54 Reclaiming the Romantic "Author"</a></li>
-                <li><a href="post53.html">53 Romanticism Was Never Naïve: A Defense in the Age of AI</a></li>
+                <li><a href="post59.html">59 Putting the Toolkit to Work: A Hermeneutic Stress-Test on "Hero"</a></li>
+                <li><a href="post58.html">58 The Final Triumph of the Mechanical Age: A Coda</a></li>
+                <li><a href="post57.html">57 The Search for the Divine Spark: Why the Ghost Matters</a></li>
+                <li><a href="post56.html">56 The Monstrous Parody of Synthetic Individuality</a></li>
+                <li><a href="post55.html">55 More Than Bullshit: The Soulless Chaos of the Machine</a></li>
+                <li><a href="post54.html">54 The Author-Function as Sacrilege: A Romantic Test</a></li>
+                <li><a href="post53.html">53 Reconsidering the Romantics: Making It More Rigorous</a></li>
                 <li><a href="post52.html">52 Analogies for Writing with AI and Why I Don't Like Them</a></li>
                 <li><a href="post51.html">51 So About That Shopping Cart</a></li>
                 <li><a href="post50.html">50 Three Mothers, Two Systems of Meaning</a></li>
