--- a/post21.html
+++ b/post21.html
@@ -27,7 +27,8 @@
 
             <p>This is obviously the same vocabulary used to attack AI. The whole argument is that AI art is evil because it's <em>inauthentic</em> (made by a machine, not a person), <em>instrumental</em> (a tool for power and profit), and results in a <em>profaned communion</em> (art without a soul).</p>
             <p>I already <a href="post13.html">summed this up before</a>. The anxieties about AI as fascist are the same old Romantic anxieties. The problem isn't that the feelings aren't real. The problem is the diagnosis is a hundred years out of date. Or two hundred years.</p>
-            <p>We're trying to understand a new kind of machine with concepts we've inherited from a pre-industrial age.</p>
+            <p>We're trying to understand a new kind of machine with concepts we've inherited from pretty far back.</p>
+            <p>This doesn't mean it's not worth thinking through. That's what the rest of the blog is for. It just means I'm not willing to copy/paste the Romantic ideas without updating for what's happening now.</p>
             
             <p><a href="index.html">Home</a> | <a href="post20.html">Previous Post</a> | <a href="post22.html">Next Post</a></p>
         </article>
