--- a/post25.html
+++ b/post25.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <h2>25 Crossing Brooklyn Ferry</h2>
-            <p>When people talk about the "soul of art" or the "human spark," what do they actually mean? The vocabulary is always vague, more a feeling than an argument. But it's a real feeling and there's a real argument in there somewhere. This makes the case better than any essay: <a href="https://www.poetryfoundation.org/poems/45470/crossing-brooklyn-ferry">Walt Whitman's "Crossing Brooklyn Ferry.</a>"</p>
+            <p>When people talk about the "soul of art" or the "human spark," what do they actually mean? The vocabulary is always vague, more a feeling than an argument. But it's a real feeling and there's a real argument in there somewhere. There's a poem that makes the case better than any essay: <a href="https://www.poetryfoundation.org/poems/45470/crossing-brooklyn-ferry">Walt Whitman's "Crossing Brooklyn Ferry.</a>"</p>
 
             <p>The poem is a direct address to us, his future readers. From the very beginning, he makes a radical promise. He's not just describing a scene; he's claiming to be with us, right now:</p>
 
