--- a/post27.html
+++ b/post27.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <h2>27 Preaching by Prompt in the 16th Century</h2>
-            <p>The idea (from my <a href="post26.html">last post</a>) of a pastor using AI to generate a sermon feels like a deep violation, a kind of sacrilege. But is this feeling grounded in Christian tradition or even in scripture itself? Is it rooted in the ancient foundations of the faith? Or is it a more recent development? History provides a fascinating answer in the form of a once-ubiquitous technology for sermon production: <em>the postil</em>.</p>
+            <p>The idea (from my <a href="post26.html">last post</a>) of a pastor using AI to generate a sermon feels like a deep violation, a kind of sacrilege. But is this feeling grounded in Christian tradition or even in scripture itself? Is it rooted in the ancient foundations of the faith? Or is it a more recent development? History might provide an answer in the form of a kind of technology for sermon production: <em>the postil</em>.</p>
 
             <p>A postil was a collection of pre-written sermons, organized according to the church year's scriptural readings (the pericopes). Before the Reformation and for centuries after, these books were a staple of clerical life. They were practical tools for a vital task. Some collections even bore titles like <em>Dormi secure</em> ("Sleep Well!") a frank acknowledgment of their purpose: to provide a ready-made sermon for an overworked or under-trained priest so he could sleep without worry. It was a technology designed to solve a problem of production and quality control.</p>
 
