--- a/post28.html
+++ b/post28.html
@@ -27,7 +27,7 @@
 
             <p>The panelist immediately follows this by saying, "I sit with Claude and he winces not." This is the move. It places Shakespeare and the AI on the same footing. In the act of reading, both are unwincing, unresponsive structures. If we can learn from one, why not the other? The Romantic objection to AI, that there’s "no one there," is based on the illusion that there <em>is</em> someone there when we read a book. But there isn't. There is only the reader, the text, and the wince of understanding or confusion that happens entirely inside the reader's own head.</p>
 
-            <p>The fear showing up in the teachers in this conversation -- it isn’t that AI lacks a human soul. The fear really comes from what we all know in a pragmatic way: the human connection we talk about when we talk about books has never been there to begin with. (Assuming, here, the author isn't someone the reader knows.) The author does not wince. Words can't wince.</p>
+            <p>The fear felt by the teachers in this conversation isn’t that AI lacks a human soul. The fear really comes from what we all know in a pragmatic way: the human connection we talk about when we talk about books has never been there to begin with. (Assuming, here, the author isn't someone the reader knows.) The author does not wince. Words can't wince.</p>
 
             <p><a href="index.html">Home</a> | <a href="post27.html">Previous Post</a> | <a href="post29.html">Next Post</a></p>
         </article>
