--- a/post40.html
+++ b/post40.html
@@ -33,7 +33,7 @@
 
             <p>What makes this "bullshit" argument important is it gives a philosophical name to a common gut feeling. It comments on why interacting with AI can feel hollow. It's not just that the machine can be wrong; it's that it has no capacity to care about being right. Pure indifference is really alien to us humans.</p>
             
-            <p>This is a widespread moral argument against AI. But it's built on an assumption about what language is <em>for</em>. It assumes language is, or should be, a tool for sincere, truth-seeking humans. But what if that's not what language is at all? More on that next.</p>
+            <p>This is a widespread moral argument against AI. But it's built on an assumption about what language is <em>for</em>. It assumes language is, or should be, a tool for sincere, truth-seeking humans. But what if that's not what language is for? More on that next.</p>
 
             <p><a href="index.html">Home</a> | <a href="post39.html">Previous Post</a> | <a href="post41.html">Next Post</a></p>
         </article>
