--- a/post41.html
+++ b/post41.html
@@ -31,7 +31,7 @@
             <p>This leads him to an uncomfortable place. The speaking self is separate from the feeling self.</p>
 
             <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
-                <p>...the thing doing the talking isn't the thing doing the feeling seems almost like an outof Body Experience I'm listening to myself talk right now who's actually forming these words</p>
+                <p>...the thing doing the talking isn't the thing doing the feeling...seems almost like an out of Body Experience...I'm listening to myself talk right now who's actually forming these words</p>
             </blockquote>
 
             <p>From this perspective, the "bullshit" critique is aiming at the wrong target. It accuses the machine of a moral failure (insincerity) when the machine is just revealing the amoral, computational nature of language itself. The hollowness we feel isn't the AI's failure to be a person; it's a glimpse into the impersonal language system that has been running inside us all along.</p>
