--- a/post43.html
+++ b/post43.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <h2>43 A dance of symbols</h2>
-            <p>Just caught a new video with Elan Barenholtz. He dropped a phrase that perfectly crystallizes the computational/structuralist view of language I've been wrestling with. He calls it the <a href="https://www.youtube.com/watch?v=o8NU9oASFXU&t=138s">"dance of symbols."</a></p>
+            <p>I saw a new video of Elan Barenholtz. He said something that crystallizes the computational/structuralist view of language I've been wrestling with. He calls it the <a href="https://www.youtube.com/watch?v=o8NU9oASFXU&t=138s">"dance of symbols."</a></p>
             
             <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
                 <p>...the word cup can be just this abstract thing that just plays the role in the dance of symbols and nothing else.</p>
