--- a/post50.html
+++ b/post50.html
@@ -36,13 +36,9 @@
 
             <p>The still from "Hero" is a specific act of <a href="post23.html"><em>parole</em></a> (an individual utterance) that only gains its full meaning when read against this established code. It systematically inverts the binary oppositions of the first system. Here, the threat is not external; it is internal. The signifier of that threat (the cowboy father) has just arrived from the outside, fracturing the family unit. The mother's gaze is not directed outward at the world, but inward, at the personal source of the system's instability. The children are not unified with her; one runs joyfully away from the domestic space toward the disruptive force.</p>
 
-            <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
-                <p><a href="post47.html">Is his dangerous, all-consuming passion for the rodeo a noble sacrifice he makes for her, or is it the very thing that prevents him from being a present father?</a></p>
-            </blockquote>
-
             <p>A modernist reading asks this question to probe the character's psychology. A structuralist reading sees the question itself as the point. The video's primary function is to place two narratives (the Heroic Quest and the Broken Home) into a state of unresolved opposition. The mother in the doorway is not, in this reading, a person whose pain we are meant to feel. She is a sign whose function is to be the counter-sign to the hero. Her weary gaze is the necessary difference that allows the sign of "The Cowboy" to be read not as a simple hero, but as a complex and unstable signifier.</p>
             
-            <p>The "truth" is not found in either narrative but in the structure of their conflict. The Romantic seeks a sincere soul, the modernist seeks a fractured one, but the structuralist sees only the "dance of symbols" (<a href="post43.html">Post 43</a>). The video doesn't tell us who the cowboy "really" is. It simply puts the visual codes for "Hero" and "Homewrecker" into play and leaves the system to generate its own irresolvable meaning.</p>
+            <p>The "truth" is not found in either narrative but in the structure of their conflict. The Romantic seeks a sincere soul, the modernist seeks a fractured one, the structuralist's attuned to the "dance of symbols" (<a href="post43.html">Post 43</a>). The video doesn't tell us who the cowboy "really" is. It simply puts the visual codes for "Hero" and "Homewrecker" into play and leaves the system to generate its own irresolvable meaning.</p>
 
             <p><a href="index.html">Home</a> | <a href="post49.html">Previous Post</a> | <a href="post51.html">Next Post</a></p>
         </article>
