--- a/post53.html
+++ b/post53.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Post 53 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family/Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="Introducing the 'Steelmanning the Romantics' series, a critical re-evaluation of the Romantic worldview as a toolkit for analyzing AI."/>
+  <meta name="description" content="Introducing the 'Steelmanning the Romantics' series, a critical re-evaluation of the Romantic worldview as a fierce intellectual resistance to the Mechanical Age and its modern heir, AI."/>
 </head>
 <body>
   <header data-template="header">
@@ -18,26 +18,25 @@
       <div class="top-links">
         <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
-      <h2>53 Steelmanning the Romantics: A More Rigorous Toolkit for a Troubled Idea</h2>
-      <p>For dozens of posts, I've been diagnosing what I call the "Romantic trace" in our contemporary debates about AI. I've argued that our anxieties about authenticity, the "human spark," and soulless machines are echoes of a worldview we inherited from the 1800s—a worldview I've suggested is inadequate for our current technological moment.</p>
-      <p>But a critique is only as good as its understanding of the thing it criticizes. Have I been fair? Or have I been attacking a caricature—a "Romanticism" of sentimental feelings and diary-like sincerity? By using the term as a shorthand for a set of gut feelings, I risk making the same mistake I'm accusing others of: relying on an inherited, unexamined concept.</p>
-      <p>This series of posts is an attempt to correct that. It is not a <em>defense</em> of Romanticism, nor is it an abandonment of my core critique. It's an exercise in intellectual honesty. Before we can definitively say that the Romantic worldview fails us, we must engage with its most powerful and rigorous form. We have to steelman the argument.</p>
-      <p>My new claim is this: Romanticism wasn't just a collection of feelings; it was a sophisticated intellectual movement that built a powerful <strong>method</strong> for understanding texts, consciousness, and meaning. To strengthen my own argument, I need to understand that method from the inside.</p>
+      <h2>53 Reconsidering the Romantics: Making It More Rigorous</h2>
+      <p>For dozens of posts, I've been diagnosing what I call the "Romantic trace" in our contemporary debates about AI. I've argued that our anxieties about authenticity, the "human spark," and soulless machines are echoes of a worldview we inherited from the 1800s. It's a worldview I've suggested is inadequate for our current technological moment.</p>
+      <p>But a critique is only as good as the version of the thing it criticizes. Maybe I've been attacking a sentimentalized caricature of the Romantic. By reducing it to a set of gut feelings, I may have underestimated my subject. True Romanticism wasn't just a mood; it was a fierce, coherent, and revolutionary worldview forged in direct opposition to what Thomas Carlyle called the "Mechanical Age." It was a spiritual and philosophical resistance to a world being remade by the logic of the machine.</p>
+      <p>This series of posts is an attempt to correct my earlier approach. Before we dismiss the Romantic worldview, we must first build its strongest, most principled form. We need to understand it not as a collection of feelings, but as a powerful counter-project against the very mechanistic philosophy that finds its ultimate expression in artificial intelligence.</p>
       
       <h3>What This Series Will Do</h3>
-      <p>This is not a conversion narrative. It is a strategic deep dive. The goal is to build a better toolkit for analysis by first understanding the tools of the very worldview I've been questioning. This series will do three things:</p>
+      <p>The goal is to understand the depth and rigor of the opposition to AI by reconstructing its historical source. These posts will do three things:</p>
       <ul>
-        <li><strong>Isolate the Method:</strong> We will move past the caricature of "sincere feelings" and reconstruct the disciplined, evidence-based interpretive practices the Romantics actually developed. The "author," for them, was not a ghost to be channeled but a <em>reconstructable practice</em> to be traced in the text. We need to understand the logic of this method, even if we ultimately reject its premises.</li>
-        <li><strong>Provide a Diagnostic Toolkit:</strong> I'm creating a <a href="Romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to serve as the intellectual home base for this series. Think of it not as a user manual to be adopted, but as a field guide to a foreign country. It contains the key concepts and a step-by-step breakdown of the method. Use it to understand the internal logic of the system we are analyzing.</li>
-        <li><strong>Stress-Test the Method Against AI:</strong> Each post in this series will use this toolkit to analyze the core problems of AI. The goal isn't to prove that the Romantic method works. The goal is to ask a more interesting question: What happens when you apply this powerful, 200-year-old interpretive engine to a 21st-century technology it could never have anticipated? What can it illuminate, and where do its foundational assumptions finally break down?</li>
+        <li><strong>Isolate the Method:</strong> I'll move past the caricature of "sincere feelings" and reconstruct the disciplined interpretive practices the Romantics actually developed. Their methods were designed to locate and illuminate the divine spark of human consciousness in a text.</li>
+        <li><strong>Provide a Diagnostic Toolkit:</strong> I'm creating a <a href="Romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to serve as the intellectual home base for this series. It describes key concepts and a step-by-step breakdown of the method, grounded in the movement's core convictions.</li>
+        <li><strong>Stage a Confrontation:</strong> Each post in this series will apply this robust Romantic framework to the core problems of AI. The goal isn't a neutral "stress-test." The goal is to ask a more pointed question: What happens when you apply an interpretive process, forged in opposition to the machine, to its ultimate technological heir? The point is to see not just if the method breaks, but why it delivers a damning verdict.</li>
       </ul>
       
       <h3>How to Read This Series</h3>
-      <p>Start with the toolkit, not as a manual to be followed, but as a map of the territory we are about to explore. The posts that follow are experiments. They apply the Romantic method not to celebrate it, but to understand its mechanics, its power, and its limits.</p>
-      <p>This series is an argument that to move <em>past</em> the Romantic worldview that still quietly shapes so much of our thinking, we first have to understand it, in its own terms, better than it understood itself.</p>
+      <p>These posts are a demonstration of a worldview in action. They apply the Romantic method not as a neutral experiment, but to reveal its foundational, uncompromising commitments and to show why, from its perspective, AI is not just a new tool, but a spiritual antagonist.</p>
+      <p>To move forward, we first have to understand the strongest form of the resistance. We must understand the Romantic argument on its own terms.</p>
 
       <hr>
-      <p class="series-note">This post inaugurates the <em>"Steelmanning the Romantics"</em> series. The <a href="Romantic-quick-kit.html">Quick Kit</a> is the essential starting point for the posts that follow.</p>
+      <p class="series-note">Here's the <a href="Romantic-quick-kit.html">Quick Kit</a> mentioned above as the starting point for the posts that follow.</p>
       <p><a href="index.html">Home</a> | <a href="post52.html">Previous Post</a> | <a href="post54.html">Next Post</a></p>
     </article>
   </main>
