--- a/post55.html
+++ b/post55.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="Moving beyond the 'bullshit' critique of AI by using Romantic hermeneutics to analyze the textual unconscious of an unconscious text."/>
+  <meta name="description" content="Rejecting the 'bullshit' critique of AI as insufficient and applying a Romantic lens to reveal AI's output as meaningless chaos, not a textual unconscious."/>
 </head>
 <body>
   <header data-template="header">
@@ -18,23 +18,30 @@
       <div class="top-links">
         <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
-      <h2>55 More Than Bullshit? Reading the Textual Unconscious of an Unconscious Text</h2>
-      <p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="Romantic-kit-authenticity.html">inauthenticity</a>. The machine speaks words it does not inhabit.</p>
-      <p>But the Romantic toolkit was more sophisticated than this. Friedrich Schlegel argued that a great work "aims at more than it knows," carrying <strong>unconscious meanings</strong>. He even suggested that a text's <strong>"confusions" and contradictions</strong> were themselves meaningful, revealing the author's internal struggles. This is a method that embraces flaws. What happens if we apply this generous lens to AI?</p>
+      <h2>55 More Than Bullshit: The Soulless Chaos of the Machine</h2>
+      <p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="Romantic-kit-authenticity.html">inauthenticity</a>. But this critique is too generous. It grants the machine a semblance of agency—the bullshitter, after all, has a purpose. The rigorous Romantic toolkit reveals a deeper, more damning truth.</p>
+      <p>Friedrich Schlegel argued that a great work "aims at more than it knows," carrying <strong>unconscious meanings</strong>. He believed a text's "confusions" and contradictions were themselves meaningful, revealing the author's internal struggles.<sup><a href="#ref1">1</a></sup> For a visionary like William Blake, art was a "Mental Fight," the struggle to give form to divine imagination.<sup><a href="#ref2">2</a></sup> Flaws and "confusions" in such a work are the scars of a noble battle. What happens when we apply this lens to AI?</p>
 
-      <h3>From Bullshit to Artifact: An Example</h3>
+      <h3>From Bullshit to Chaos: An Example</h3>
       <p>Let's use our previous example: an AI prompted for a corporate statement on "innovation" produces text blending Silicon Valley jargon with agrarian metaphors ("planting the seeds of synergy," "harvesting disruptive ideas").</p>
       <ul>
         <li>The "bullshit" reading dismisses this as a meaningless, contradictory cliché.</li>
-        <li>A <strong>Schlegelian hermeneutic reading</strong>, however, sees a rich artifact. The unintentional fusion—the "productive confusion"—isn't the AI's "idea." It's an unmediated expression of a deep-seated American myth (the Jeffersonian farmer reborn as the tech entrepreneur) that is latent in the training data. The AI, having no conscious intent to smooth over the contradiction, reveals it raw.</li>
+        <li>A <strong>Romantic hermeneutic reading</strong> sees something far worse. This is not "productive confusion." Schlegel's method sought the hidden depths of a <em>human</em> mind. Blake's art was a product of the "Divine Humanity."<sup><a href="#ref3">3</a></sup> The AI's contradictions are not the sign of a struggling soul, but the meaningless output of a purely mechanical process. It is chaos, not unconscious meaning.</li>
       </ul>
       
-      <h3>The Critical Pivot: Whose Unconscious Is It Anyway?</h3>
-      <p>Here again, the rigorous method works, but reveals something deeply unsettling. We have successfully extracted a "surplus of meaning" from the text's "confusion." But is this meaning <em>in</em> the text, or is it entirely in us, the interpreters?</p>
-      <p>The AI knows nothing of Jefferson or Silicon Valley. It is just generating a probable sequence. <em>We</em> are the ones who recognize the pattern and dignify its contradiction as "productive." Schlegel’s method was designed to uncover the hidden depths of a human author's mind and time. Applied to AI, it reveals that the "textual unconscious" is our own. We are finding meaning not because the text is deep, but because our capacity for interpretation is.</p>
-      <p>This reframes the "bullshit" critique. Perhaps the true bullshit isn't the AI's indifference to truth, but the interpretive hubris of treating its statistical noise as a profound, symbolic dream. We ask the machine to dream for us, and then congratulate ourselves on our brilliant interpretation of the result.</p>
+      <h3>The Critical Pivot: The Unconscious vs. The Unthinking</h3>
+      <p>Here the Romantic method delivers its judgment. The "unconscious" of a human artist is a wellspring of vision, intuition, and buried truth. The process of an AI is unthinking. Its "confusions" reveal nothing but the statistical noise of its training data. They are accidents of the machine, not symbols from the soul.</p>
+      <p>For Blake, who fought against the "dark Satanic Mills" of a mechanistic worldview, an AI's text would be the ultimate artifact of that satanic logic.<sup><a href="#ref2">2</a></sup> It is a system that mimics the form of creation without the divine spark of imagination that makes it sacred. The "bullshit" critique is a secular complaint. The Romantic critique is theological: the AI's output is not a flawed text to be interpreted, but a hollow idol, a profane imitation of the divine act of creation.</p>
 
       <hr>
+      <div class="references">
+        <h3>References</h3>
+        <ol>
+          <li id="ref1">Friedrich Schlegel, <a href="https://germanhistorydocs.org/en/the-holy-roman-empire-1648-1815/friedrich-schlegel-athanaeum-fragments-1798" target="_blank"><em>Athenaeum Fragments</em></a>, No. 20. Schlegel writes, "A work is cultivated when it is delimited everywhere but limited nowhere," implying this inexhaustible, unconscious depth.</li>
+          <li id="ref2">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>.</li>
+          <li id="ref3">William Blake, <a href="https://www.poetryfoundation.org/poems/43656/the-divine-image" target="_blank" rel="noopener">William Blake, "The Divine Image" (Songs of Innocence)</a> from <em>Songs of Innocence</em>, which speaks of "the human form divine."</li>
+        </ol>
+      </div>
       <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post54.html">Previous Post</a> | <a href="post56.html">Next Post</a></p>
     </article>
