--- a/post62.html
+++ b/post62.html
@@ -48,7 +48,7 @@
             <h3>Step 3: The Dialectical Movement in Practice</h3>
             <p>The real art of this hermeneutic method is not to choose one reading over the other, but to move fluidly between them. The tension is the point. For example:</p>
             <ol>
-                <li>Start with <em>archeology</em>: "This AI-generated poem is just a cliché-ridden product of its training data, a blurry jpeg of a thousand other poems."</li>
+                <li>Start with <em>archeology</em>: "This AI-generated poem is just a cliché-ridden product of its training data, <a href="post37.html">a blurry jpeg</a> of a thousand other poems."</li>
                 <li>Discover a <em>teleological</em> possibility: "But the strange way it combined a technological metaphor with a natural one is something I've never seen before. That gives me a new idea."</li>
                 <li>Circle back to <em>archeology</em>: "This new idea wasn't 'created' by the AI, but was an accidental byproduct of its non-human, statistical method of combining words—a method a human writer, constrained by convention, might never have tried."</li>
                 <li>Arrive at a <em>dialectical synthesis</em>: "The AI text, a product of a non-conscious, 'archaic' linguistic process, has become the occasion for a forward-looking, 'teleological' expansion of my own creative consciousness."</li>
