--- a/post32.html
+++ b/post32.html
@@ -44,7 +44,7 @@
 
         <p>So, Harari's entire argument against AI is a defense of the Romantic soul. He's afraid the machine will profane a sacred space. But this brings us back to Ellul, and back to the uncomfortable question from <a href="post28.html">another post</a>: What if there's no one there to begin with? What if "Shakespeare winces not"?</p>
 
-        <p>Ellul's argument is that the technological society has already profaned that space. We are already living in a world of mass-produced intimacy, managed emotions, and total propaganda. The authentic, sincere, Romantic individual Harari is trying to protect from the machine has long since been integrated into the system. Harari is standing guard over a faint outline, afraid a robot will take something whose trace has already faded.</p>
+        <p>Ellul's argument is that the technological society has already profaned that space. We are already living in a world of mass-produced intimacy, managed emotions, and total propaganda. The authentic, sincere, Romantic individual Harari is trying to protect from the machine has long since been integrated into the system.</p>
 
         <p><a href="index.html">Home</a> | <a href="post31.html">Previous Post</a> | <a href="post33.html">Next Post</a></p>
     </article>
