--- a/post46.html
+++ b/post46.html
@@ -16,17 +16,17 @@
         <article>
             <h2>46 The cowboy and the thunder-god</h2>
             
-            <p>In the <a href="post45.html">last post</a>, I said the song <a href="https://www.youtube.com/watch?v=mHeK0Cwr9sg">"Hero"</a> redefines the heroic. It rejects public performance for private, sincere struggle. This gets clearer if we read it alongside Thomas Carlyle. His 1840 lecture, <em>On Heroes, Hero-Worship, and the Heroic in History</em>, is basically the definition of the "big man" the song wants nothing to do with.</p>
+            <p>In the <a href="post45.html">last post</a>, I said the song <a href="https://www.youtube.com/watch?v=mHeK0Cwr9sg">"Hero"</a> redefines the heroic. It rejects public performance for private, sincere struggle. This gets clearer if we read it alongside Thomas Carlyle. His 1840 lecture, <a href="https://en.wikipedia.org/wiki/On_Heroes,_Hero-Worship,_%26_the_Heroic_in_History"><em>On Heroes, Hero-Worship, and the Heroic in History</em></a>, is basically the definition of the "big man" the song wants nothing to do with.</p>
 
             <p>For Carlyle, the Hero is the engine of history. "Universal History," he says, "is at bottom the History of the Great Men who have worked here." His heroes are world-historical figures. Odin, Mahomet, Cromwell, Napoleon. They're not exceptional, they're quasi-divine, "living light-fountains" sent to illuminate the darkness. The masses are supposed to respond with "Hero-worship," with "heartfelt prostrate admiration, submission, burning, boundless, for a noblest godlike Form of Man." This is the "parade" from the song, except Carlyle thinks it's necessary.</p>
 
-            <p>But here's the weird part. At the core of Carlyle's thunderous vision is the same quiet angle I pointed out with the song. Sincerity. "A deep, great, genuine sincerity," Carlyle writes, "is the first characteristic of all men in any way heroic." The Great Man is defined by his connection to the "everlasting truth of Nature," his inability to live in a world of "semblances and forms."</p>
+            <p>But here's the weird part. At the core of Carlyle's thunderous vision is the same quieter angle I pointed out with the song. Sincerity. "A deep, great, genuine sincerity," Carlyle writes, "is the first characteristic of all men in any way heroic." The Great Man is defined by his connection to the "everlasting truth of Nature," his inability to live in a world of "semblances and forms."</p>
 
             <p>So. The song's cowboy and Carlyle's Cromwell have the same soul. They live in different worlds. The song looks at the grand, historical hero (the guy who shapes nations) and says, "I don't want that." It keeps the essence and rejects the scale.</p>
 
-            <p>Carlyle's Hero: A "great chaotic inarticulate Cromwell," a "bringer-back of men to reality," whose sincerity is the engine of historical change.</p>
+            <p><strong>Carlyle's Hero:</strong> A "great chaotic inarticulate Cromwell," a <a href="https://www.online-literature.com/thomas-carlyle/heroes-and-hero-worship/4/">"bringer-back of men to reality,"</a> whose sincerity is the engine of historical change.</p>
             
-            <p>The Song's Hero: A quiet, inarticulate cowboy, whose sincerity shows up not in changing the world but in the reality of providing for his family.</p>
+            <p><strong>The Song's Hero:</strong> A quiet, inarticulate cowboy, whose sincerity shows up not in changing the world but in the reality of providing for his family.</p>
 
             <p>The cowboy rejects the public "Hero-Worship" Carlyle sees as the foundation of society. For him, worship has become the "masquerade." In an age skeptical of Carlyle's "Great Men," the song suggests the only believable heroism happens off stage. It takes the central Romantic virtue of sincerity, which Carlyle saw as a world-historical force, and relocates it to the private sphere.</p>
 
