--- a/post54.html
+++ b/post54.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="Testing the Romantic method of reconstructing an 'author' by applying it to an AI-generated poem, and questioning what the results reveal about our own interpretive habits."/>
+  <meta name="description" content="Testing the Romantic method of reconstructing an 'author' by applying it to an AI-generated poem, revealing the method's categorical rejection of soulless mechanism."/>
 </head>
 <body>
 <header data-template="header">
@@ -18,9 +18,9 @@
   <div class="top-links">
     <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
   </div>
-  <h2>54 The Author-Function in the Machine: A Romantic Test</h2>
-  <p>The most common critique of AI writing is that there is "no one there." This assumes the Romantic ideal of an "author" as a soul pouring its meaning into the text. But the rigorous Romantics started from a more skeptical place: Schleiermacher famously argued that <strong>misunderstanding is the norm</strong>, and therefore interpretation must be a disciplined art. A core part of that art was reconstructing the author's singular practice.</p>
-  <p>This wasn't just empathy; it was a formal method. It involved both a <strong>comparative</strong> analysis (tracing patterns against the rules of language) and a <strong>"divinatory"</strong> one—making a disciplined, intuitive leap to hypothesize the creative act that could produce such a text. So, let's run this more complex test. Can we apply it to an AI?</p>
+  <h2>54 The Author-Function as Sacrilege: A Romantic Test</h2>
+  <p>The most common critique of AI writing is that there is "no one there." This assumes the Romantic ideal of an "author" as a soul pouring its meaning into the text. But the rigorous Romantics started from a more skeptical place: Schleiermacher famously argued that <strong>misunderstanding is the norm</strong>, and therefore interpretation must be a disciplined art.<sup><a href="#ref1">1</a></sup> A core part of that art was reconstructing the author's singular practice.</p>
+  <p>This wasn't just empathy; it was a formal method. It involved both a <strong>comparative</strong> analysis (tracing patterns against the rules of language) and a <strong>"divinatory"</strong> one—making a disciplined, intuitive leap to hypothesize the creative act that could produce such a text. So, let's run this more complex test. What happens when a Romantic interpreter confronts an AI?</p>
 
   <h3>A Practical Demonstration</h3>
   <p>I prompted an AI: "Write a four-line poem about a city at night."</p>
@@ -30,17 +30,25 @@
   <p>Applying the method:</p>
   
   <h4>1. The Grammatical/Comparative Rail</h4>
-  <p>The poem uses shared conventions: quatrain, iambic-ish meter, ABCB rhyme, familiar tropes. This is the baseline evidence.</p>
+  <p>The poem uses shared conventions: quatrain, iambic-ish meter, ABCB rhyme, familiar tropes. This is the baseline evidence, the public system of language.</p>
 
   <h4>2. The Psychological/Divinatory Rail</h4>
-  <p>Now we make our leap. We see the archaic "doth" and the tension between the organic ("seeds") and artificial ("steel"). Our divinatory guess is that the organizing "mind" here has a signature: it favors a slightly elevated, historical tone and is preoccupied with the nature/tech divide. We could then test this hypothesis against its other outputs.</p>
+  <p>Now we must make our leap. We must, as Schleiermacher puts it, "transform oneself into the other person in order to grasp his individuality directly."<sup><a href="#ref2">2</a></sup> And here, the method does not just fail; it recoils. The Romantic interpreter, reaching for a mind, finds only a mechanism. For a visionary like William Blake, for whom imagination was the divine spark of God in man, this act would be a form of spiritual horror.<sup><a href="#ref3">3</a></sup> The "divinatory" leap finds nothing to grasp. There is no soul, no vision, no "Mental Fight."<sup><a href="#ref4">4</a></sup> There is only the clatter of what Blake would call the "dark Satanic Mills"—a machine grinding language into a plausible but dead form.<sup><a href="#ref4">4</a></sup></p>
 
-  <h3>The Critical Pivot: A Discovery or a Projection?</h3>
-  <p>The method <em>works</em>. We successfully generated a plausible author-function for the machine, complete with a stylistic signature. But what have we actually discovered?</p>
-  <p>This is where the steelman exercise reveals its true purpose. The Romantic method, with its powerful two-stroke engine of analysis and divination, is so effective at constructing a coherent author that it can build one even from a statistical ghost. It proves not that the AI has a soul, but that our interpretive methods are hardwired to find one. We have successfully projected the ghost into the machine.</p>
-  <p>The question, then, is not whether an AI can have a "voice." The more unsettling question is whether the "voice" we've always found in human texts is also, in part, a similar reconstruction—a coherent pattern our minds assemble after the fact. Applying this more rigorous Romantic method to AI doesn't elevate the machine; it forces us to question the nature of the very "presence" we thought was so simple to begin with.</p>
+  <h3>The Critical Pivot: A Failure of Method, A Judgment of the Machine</h3>
+  <p>The Romantic method does not "work" on AI. It breaks, and in breaking, it delivers a verdict. The method was designed to bridge the gap between two human minds. When one of those minds is a statistical process, the bridge leads nowhere. The method doesn't just "project a ghost"; it registers a profound and horrifying absence. It proves that the AI has no "author-function" in any meaningful Romantic sense.</p>
+  <p>For a Romantic, this isn't an interesting intellectual puzzle; it's a category error and a moral judgment. To treat the machine's output as poetry would be to mistake the inanimate for the living, to worship a creation of iron fingers and vaporous wings. The test doesn't reveal our interpretive habits; it reveals the machine's absolute emptiness and confirms the fierce Romantic belief that true creation is an act of the divine human soul, and nothing less.</p>
   
   <hr>
+  <div class="references">
+    <h3>References</h3>
+    <ol>
+      <li id="ref1">Stanford Encyclopedia of Philosophy, <a href="https://plato.stanford.edu/entries/schleiermacher/#Herm" target="_blank">"Schleiermacher: Hermeneutics."</a></li>
+      <li id="ref2">Schleiermacher, Friedrich. <a href="https://www.jstor.org/stable/468302">"The Hermeneutics: Outline of the 1819 Lectures."</a> <em>New Literary History</em>, vol. 10, no. 1, 1978, pp. 1-16. This specific phrasing is a well-known summary of his "divinatory" method.</li>
+      <li id="ref3">Tate, <a href="https://www.tate.org.uk/art/artists/william-blake-39" target="_blank">"William Blake: Life and Work."</a> This article explains, "For Blake, the imagination was 'the divine body of the Lord Jesus, blessed forever'. It was the creative force in every human being..."</li>
+      <li id="ref4">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>. The source of both "Mental Fight" and "dark Satanic Mills."</li>
+    </ol>
+  </div>
   <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
   <p><a href="index.html">Home</a> | <a href="post53.html">Previous Post</a> | <a href="post55.html">Next Post</a></p>
 </article>
