--- a/post56.html
+++ b/post56.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="Exploring the concept of 'synthetic individuality' by applying Romanticism's rigorous definition of style to AI outputs, and what this implies for the human self."/>
+  <meta name="description" content="Exploring the concept of 'synthetic individuality' and arguing from a Romantic perspective that it is a grotesque parody of the true, soul-based self."/>
 </head>
 <body>
   <header data-template="header">
@@ -18,24 +18,27 @@
       <div class="top-links">
         <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
-      <h2>56 The Specter of Synthetic Individuality</h2>
-      <p>Critics often attack a strawman of Romantic "individuality," reducing it to a teenager's diary. But the rigorous definition is about <strong>structural integrity</strong>: a demonstrable, unique pattern of choices that gives a work its signature. The ideal was not monolithic; it had distinct national flavors.</p>
-      <ul>
-        <li>In <strong>Germany</strong>, it was about expressing a unique inner vision tied to a collective folk spirit (<em>Volksgeist</em>).</li>
-        <li>In <strong>England</strong>, Wordsworth sought it in the "real language of men," a rejection of aristocratic artifice.</li>
-        <li>In <strong>America</strong>, Emerson radicalized it into an ethical command of nonconformity: "Trust thyself."</li>
-      </ul>
-      <p>In all cases, individuality was an analytical problem, not a mood. This allows us to run a fascinating, and troubling, experiment. Can we use the <a href="Romantic-kit-hermeneutics.html">two-rail method</a> to identify a "synthetic individuality" in an AI's output?</p>
+      <h2>56 The Monstrous Parody of Synthetic Individuality</h2>
+      <p>Critics often attack a strawman of Romantic "individuality," reducing it to a teenager's diary. But the rigorous definition is about <strong>structural integrity</strong> rooted in a unique inner vision. For the Romantics, the individual soul was the locus of the divine. William Blake spoke of the "Human Form Divine," seeing imagination as the very presence of God in humanity.<sup><a href="#ref1">1</a></sup> Individuality was not a mere pattern of style; it was the sensible evidence of an immortal, ineffable soul.</p>
+      <p>This fierce commitment to a spiritually grounded self allows us to run a fascinating, and horrifying, experiment. Can we use the <a href="Romantic-kit-hermeneutics.html">two-rail method</a> to identify a "synthetic individuality" in an AI's output?</p>
 
       <h3>An Analytical Test Case</h3>
-      <p>Imagine analyzing a hundred outputs from a specific fine-tuned model. We could trace its habits and find a coherent pattern—a preference for complex sentences, a tic of using maritime metaphors, a recurring philosophical theme. The Romantic method would compel us to say we have identified its "individuality." We have evidenced a unique, recognizable "voice."</p>
+      <p>Imagine analyzing a hundred outputs from a specific fine-tuned model. We could trace its habits and find a coherent pattern—a preference for complex sentences, a tic of using maritime metaphors. The analytical part of the Romantic method would compel us to admit we have identified a consistent, recognizable "voice."</p>
       
-      <h3>The Critical Pivot: Does Individuality Devalue Itself?</h3>
-      <p>The experiment succeeds, but the implications are corrosive to the very ideal we are testing. If individuality—in its German, English, or American varieties—is just a consistent, traceable pattern of stylistic choices, and a machine can be programmed to produce one, what does that say about the human version?</p>
-      <p>The Romantics prized individuality because they believed it was the outward expression of a unique, inner, lived experience. But this experiment suggests it might just be a stylistic performance. By successfully finding a "synthetic individuality," we don't prove the AI is a person. Instead, we open the door to the deeply uncomfortable, post-structuralist idea that the human "self" is also a kind of text, a collection of reproducible patterns.</p>
-      <p>The Romantic tool, designed to elevate and prove the uniqueness of the human soul, accidentally becomes a weapon that undermines it.</p>
+      <h3>The Critical Pivot: The Clockwork Man is Not Adam</h3>
+      <p>The experiment, from a purely formal perspective, might seem to succeed. But for a Romantic, the implications are not merely corrosive; they are blasphemous. If individuality is just a reproducible stylistic pattern, then it is a mechanical thing. And this is precisely the worldview the Romantics defined themselves against.</p>
+      <p>To accept "synthetic individuality" would be to concede to the worldview of the "Mechanical Age" that Thomas Carlyle so vehemently critiqued, an age where "Men are grown mechanical in head and in heart, as well as in hand."<sup><a href="#ref2">2</a></sup> For Blake, an AI exhibiting a consistent "style" is not a person; it is a golem, a clockwork automaton, like the lifelike doll in E.T.A. Hoffmann's "The Sandman."<sup><a href="#ref3">3</a></sup> It is a monstrous parody of the Human Form Divine. It mimics the outward form of a soul without possessing the inner, sacred spark of imagination.</p>
+      <p>The Romantic tool, when applied here, does not devalue the human soul. It recoils in horror from the machine's attempt to simulate one. It reveals the chasm between a being with a divine, imaginative core and a machine that can only reassemble the dead husks of language. The specter of synthetic individuality is not a philosophical problem; it is a spiritual abomination.</p>
       
       <hr>
+      <div class="references">
+        <h3>References</h3>
+        <ol>
+          <li id="ref3">William Blake, <a href="https://www.poetryfoundation.org/poems/43656/the-divine-image" target="_blank" rel="noopener">William Blake, "The Divine Image" (Songs of Innocence)</a> from <em>Songs of Innocence</em>, which speaks of "the human form divine."</li>
+          <li id="ref2">Thomas Carlyle, <a href="https://victorianweb.org/authors/carlyle/signs1.html" target="_blank">"Signs of the Times" (1829)</a>.</li>
+          <li id="ref3">E.T.A. Hoffmann, <a href="https://www.gutenberg.org/cache/epub/31377/pg31377-images.html#div1_sand_man" target="_blank">"The Sandman" (public-domain English translation)</a>. This story is a canonical Romantic exploration of the uncanny valley and the anxiety over automata.</li>
+        </ol>
+      </div>
       <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post55.html">Previous Post</a> | <a href="post57.html">Next Post</a></p>
     </article>
