--- a/post58.html
+++ b/post58.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="Concluding the 'Steelmanning the Romantics' series by showing how the method, when pushed to its limit by AI, reveals more about our own need for meaning than about the machine."/>
+  <meta name="description" content="Concluding the 'Steelmanning the Romantics' series by showing how AI represents the ultimate fulfillment of the 'Mechanical Age' they feared."/>
 </head>
 <body>
   <header data-template="header">
@@ -15,28 +15,30 @@
   </header>
   <main>
     <article>
-      <h2>58 “Better Than It Understood Itself”: A Coda on a Method Pushed to Its Limit</h2>
+      <h2>58 The Final Triumph of the Mechanical Age: A Coda</h2>
       <div class="top-links">
         <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
-      <p>The boldest claim of Romantic hermeneutics is Schleiermacher's goal: to understand a work "better than [the author] understood himself." This meant making an author's unconscious patterns explicit. This principle was tested and adapted by the Romantics themselves as they grappled with the new <strong>technologies</strong> of their own era. They weren't just simple Luddites; they were fascinated by automata, and they expertly used the new technology of mass printing to build their movement. Their critique was nuanced: Carlyle's "Mechanical Age" was a critique of a <em>metaphorical</em> machine logic invading society, not just a complaint about factories.</p>
-      <p>This complex history makes the confrontation with AI even more poignant. What happens when we apply their ultimate interpretive principle to a machine they could only imagine in gothic fiction? The answer is both simple and devastating. We can, without question, understand an AI-generated text better than it understood itself, because the AI understood nothing.</p>
+      <p>The boldest claim of Romantic hermeneutics is Schleiermacher's goal: to understand a work "better than [the author] understood himself."<sup><a href="#ref1">1</a></sup> This was an attempt to make an author's unconscious, divine inspiration explicit. But this entire project was forged in the fires of another revolution. The Romantics' fiercest enemy was not a rival philosophy, but a new vision of the world: what Thomas Carlyle famously diagnosed as "the Mechanical Age."<sup><a href="#ref2">2</a></sup></p>
+      <p>Carlyle's critique, like William Blake's of the "dark Satanic Mills," was not just about factories.<sup><a href="#ref3">3</a></sup> It was about a world where "Men are grown mechanical in head and in heart," where living craft is replaced by the "speedier, inanimate one."<sup><a href="#ref2">2</a></sup> It was a spiritual crisis. The Romantics defined themselves in opposition to this deadening, mechanistic logic. Their entire worldview was a "Mental Fight" to defend the organic, the spiritual, and the divine human imagination against it.<sup><a href="#ref3">3</a></sup></p>
 
-      <h3>The Collapse of Dialogue into Monologue</h3>
-      <p>Hermeneutics was conceived as a dialogical art. With AI, this dialogue collapses into a monologue.</p>
-      <ul>
-        <li><strong>We articulate the tacit:</strong> But the patterns we find are artifacts of a statistical process, not a mind's habit.</li>
-        <li><strong>We expand the context:</strong> But we are placing a non-historical object into a history it has no awareness of.</li>
-        <li><strong>We reveal the surplus:</strong> But this surplus meaning is entirely our own creation.</li>
-      </ul>
-      <p>The act of interpretation, once a bridge between two minds, becomes an echo chamber.</p>
+      <h3>The Ultimate Test</h3>
+      <p>What happens, then, when we apply their ultimate interpretive principle to AI—the purest expression of the Mechanical Age they could have ever imagined? The answer is a judgment. We can, without question, understand an AI-generated text better than it understood itself, because the AI understood nothing. The act is meaningless.</p>
+      <p>The hermeneutic dialogue collapses into a monologue in a void. We find patterns, but they are the patterns of a soulless algorithm, not a striving human spirit. We reveal a "surplus," but it is entirely our own projection onto a blank, unthinking surface. The bridge Schleiermacher built to connect two souls leads off a cliff.</p>
 
       <h3>Conclusion to the Series</h3>
-      <p>This series set out to test the Romantic worldview by engaging its most rigorous tools. What we found is that the toolkit is extraordinarily powerful—so powerful that it can conjure a ghost of meaning from a soulless machine.</p>
-      <p>But this success is a failure in disguise. The Romantic method, when applied to AI, doesn't teach us about the machine's soul. It teaches us about the architecture of our own need for meaning. It reveals the deep, human assumption that behind every text, there must be a "someone" there.</p>
-      <p>Ironically, the Romantics, who navigated the technological disruptions of their own age with a mix of anxiety and adoption, provided an interpretive framework so human-centric that it struggles to account for a technology that doesn't just print our words, but writes them itself. Their method, when pushed to this limit, becomes a diagnostic tool for understanding ourselves.</p>
+      <p>This series set out to test the Romantic worldview against AI. What we found is that this worldview is not merely a set of aesthetic preferences, but a coherent and fierce spiritual resistance to the very logic that produces AI.</p>
+      <p>The Romantic method, when applied to AI, does not teach us about a new kind of authorship. It reveals AI as the final triumph of the Machine. It is the ultimate "speedier, inanimate one," an engine of "rule and calculated contrivance" that replaces the living artisan.<sup><a href="#ref2">2</a></sup> The Romantic resistance to AI is not a sentimental attachment to the past. It is the original, foundational critique of the modern world finally meeting its ultimate antagonist. For the Romantics, AI would not be a tool. It would be the enemy.</p>
 
       <hr>
+      <div class="references">
+        <h3>References</h3>
+        <ol>
+          <li id="ref1">This principle is a famous distillation of Schleiermacher's thought, often summarized in secondary sources on hermeneutics. See, for example, the Stanford Encyclopedia of Philosophy entry on <a href="https://plato.stanford.edu/entries/hermeneutics/" target="_blank">Hermeneutics</a>.</li>
+          <li id="ref2">Thomas Carlyle, <a href="https://victorianweb.org/authors/carlyle/signs1.html" target="_blank">"Signs of the Times" (1829)</a>.</li>
+          <li id="ref3">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>.</li>
+        </ol>
+      </div>
       <p class="series-note">This post concludes the <em>"Steelmanning the Romantics"</em> series. The <a href="Romantic-quick-kit.html">Quick Kit</a> remains as a standing reference.</p>
       <p><a href="index.html">Home</a> | <a href="post57.html">Previous Post</a> | <a href="post59.html">Next Post</a></p>
     </article>
