--- a/post59.html
+++ b/post59.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="A final stress-test of the Romantic hermeneutic method, re-analyzing the 'Hero' music video to reveal the method's powers and its inherent biases."/>
+  <meta name="description" content="A final stress-test of the Romantic hermeneutic method, re-analyzing the 'Hero' music video to reveal the method's powers and its fierce moral commitments."/>
 </head>
 <body>
   <header data-template="header">
@@ -20,7 +20,7 @@
         <a href="ai-hermeneutics-kit.html" class="kit-link-small">AI Hermeneutics Kit</a>
       </div>
       <h2>59 Putting the Toolkit to Work: A Hermeneutic Stress-Test on "Hero"</h2>
-      <p>In earlier posts (<a href="post45.html">45</a>-<a href="post50.html">50</a>), I read the "Hero" music video from several angles. To conclude this "Steelman" series, I want to return to it as a final stress-test, applying the rigorous method from our <a href="Romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to see not just what it reveals, but where it strains.</p>
+      <p>In earlier posts (<a href="post45.html">45</a>-<a href="post50.html">50</a>), I read the "Hero" music video from several angles. To conclude this "Steelman" series, I want to return to it as a final stress-test, applying the rigorous method from our <a href="Romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to see not just what it reveals, but what it defends.</p>
 
       <h3>Step 1 & 2: Running the Method (Hypothesis and The Two Rails)</h3>
       <ul>
@@ -30,16 +30,22 @@
       </ul>
 
       <h3>Step 3: Turning the Circle (Synthesizing the Rails)</h3>
-      <p>Here, the method works perfectly. The initial hypothesis of simple heroism is shattered by the evidence from the parts. We are forced to revise our understanding. The video's true subject is not simple heroism, but the <strong>irresolvable tension</strong> between the myth and the messy reality. The hermeneutic circle produces a richer interpretation.</p>
+      <p>Here, the method works perfectly. The initial hypothesis of simple heroism is shattered by the evidence from the parts. We are forced to revise our understanding. The video's true subject is not simple heroism, but the <strong>irresolvable tension</strong> between the myth and the messy reality. The hermeneutic circle produces a richer, more human interpretation.</p>
       
-      <h3>Step 4 & The Critical Pivot: Whose Conflict Is It?</h3>
+      <h3>Step 4 & The Critical Pivot: A Human Drama or a Soulless System?</h3>
       <p>Finally, we listen for surplus meaning. A Romantic reading concludes that the video performs the struggle of modern identity—the conflict between cultural myths and lived reality. This conflict is what gives the work its power.</p>
       <p>But this is where we must apply pressure. The Romantic method, with its focus on the "psychological rail," forces us to locate this conflict <em>within a singular consciousness</em>—the director's vision, the character's struggle. The method's bias is to create a unified, psychologically coherent story of conflict.</p>
-      <p>Is this the most honest reading? A structuralist reading (as in <a href="post50.html">Post 50</a>) would argue that there is no singular "consciousness" here to analyze. There is only the impersonal <strong>collision of systems</strong>: the visual code for "Hero" clashes with the visual code for "Broken Home." The tension is in the structure of the text, not in a person's soul.</p>
-      <p>The Romantic method gives us a compelling human drama. But it does so by imposing a psychological narrative onto what might be a purely structural event. This final test reveals the method's greatest strength and its ultimate blind spot: its profound, powerful, and perhaps illusory commitment to finding a human story, even in the dance of impersonal codes.</p>
+      <p>Is this the most honest reading? A structuralist reading (as in <a href="post50.html">Post 50</a>) would argue that there is no singular "consciousness" here to analyze. There is only the impersonal <strong>collision of systems</strong>: the visual code for "Hero" clashes with the visual code for "Broken Home." The tension is in the structure of the text, not in a person's soul. This is the world of William Blake's "dark Satanic Mills" translated into aesthetics—a world of impersonal, grinding systems without a human center.<sup><a href="#ref1">1</a></sup></p>
+      <p>The Romantic method gives us a compelling human drama. It does so by insisting on finding a human story, a soul in struggle. This final test reveals the method's greatest strength and its ultimate moral commitment. It is not a neutral tool with a "blind spot." It is a fierce defender of the human. It actively chooses to read for the soul, because the alternative is to surrender to the "dance of impersonal codes"—to accept that we are living in the Mechanical Age. For a Romantic, that is a choice worth fighting against with every interpretive act.</p>
       
       <hr>
-      <p class="series-note">This post serves as a practical capstone to the <em>"Steelmanning the Romantics"</em> series, demonstrating both the power and the inherent biases of the method.</p>
+      <div class="references">
+        <h3>References</h3>
+        <ol>
+          <li id="ref1">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>.</li>
+        </ol>
+      </div>
+      <p class="series-note">This post serves as a practical capstone to the <em>"Steelmanning the Romantics"</em> series, demonstrating both the power and the fierce moral commitments of the method.</p>
       <p><a href="index.html">Home</a> | <a href="post58.html">Previous Post</a> | <a href="post60.html">Next Post</a></p>
     </article>
   </main>
