fixed romantic links

--- a/romantic-kit-hermeneutics.html
+++ b/romantic-kit-hermeneutics.html
@@ -14,7 +14,7 @@
 <main>
   <article>
     <div class="top-links">
-      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>A Romantic Method for Reading</h1>
 
@@ -62,7 +62,7 @@
       </li>
     </ul>
     <div class="bottom-links">
-      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
   </article>
 </main>
