--- a/romantic-kit-technology-machine.html
+++ b/romantic-kit-technology-machine.html
@@ -14,10 +14,10 @@
 <main>
   <article>
     <div class="top-links">
-      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>Technology & The Machine (The Shadow of the Organic)</h1>
-    <p>If authenticity and <a href="Romantic-kit-organic-form.html">organic unity</a> were the Romantics' ideals, "the Machine" was their shadow. Their critique was aimed not just at the new factories of the Industrial Revolution, but at the entire mechanistic worldview inherited from the Enlightenment. They believed that the rationalist effort to explain the universe had ended up explaining it away, "sinking the Supernatural to the Natural."</p>
+    <p>If authenticity and <a href="romantic-kit-organic-form.html">organic unity</a> were the Romantics' ideals, "the Machine" was their shadow. Their critique was aimed not just at the new factories of the Industrial Revolution, but at the entire mechanistic worldview inherited from the Enlightenment. They believed that the rationalist effort to explain the universe had ended up explaining it away, "sinking the Supernatural to the Natural."</p>
     <p>The great Romantic counter-project was to reverse this process by "raising the Natural to the Supernatural." This revolutionary idea, most famously articulated by Thomas Carlyle, is known as <a href="https://en.wikipedia.org/wiki/Natural_Supernaturalism">Natural Supernaturalism</a>. It proposes that the world does not need miracles that violate the laws of nature, because nature itself, in its everyday workings, is the ultimate miracle. For the Romantics, "the Machine" became a powerful metaphor for any system (philosophical, social, or aesthetic) that was rigid, impersonal, and blind to this inherent wonder.</p>
 
     <h2>Three Critical Traditions</h2>
@@ -41,7 +41,7 @@
       </li>
     </ul>
     <div class="bottom-links">
-      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
   </article>
 </main>
